# mpremote-path

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  board.py  cliff.toml  pyproject.toml  remote_path.py  requirements.txt  scratch.py
.github/workflows/: ci-release.yaml  ci-test-build.yaml  ci-test.yaml  ci-tests.yaml  ci-workflow.yaml  ci.yaml  publish.yaml
src/mpremote_path/: __init__.py  board.py  mpremote_path.py  remote_path.py
src/mpremote_path/util/: mpfs.py  mpfscmd.py  mpfsops.py
tests/: common.py  conftest.py  logging.yaml  test_base.py  test_recursive.py  test_recursive_copy.py  test_util_mpfs.py  test_util_mpfscmd.py  test_util_mpfsops.py  unix_port.py
tests/_data/src/ota/: status.py
tests/unix-micropython/: boot.py
typings/mpremote/: transport_serial.pyi
