[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mpremote-path"
description = "Pathlib compatible interface to files on a MicroPython device"
readme = "README.md"
authors = [{name = "glenn20", email = "6965319+glenn20@users.noreply.github.com"}]
urls = {Homepage = "https://github.com/glenn20/mpremote-path"}
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Embedded Systems",
]
requires-python = ">=3.7"
dynamic = ["dependencies", "version"]

[tool.hatch.version]
path = "src/mpremote_path/__init__.py"


[tool.hatch.build.targets.wheel]
packages = ["src/mpremote_path"]

[tool.ruff]
target-version = "py37"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
